# crosvm

./: .gitignore  .gitmodules  Cargo.toml  build_test.py
arch/: Cargo.toml
arch/src/: lib.rs
devices/: Cargo.toml
devices/src/: cmos.rs  ioapic.rs  lib.rs  pit.rs  pl030.rs  serial.rs  split_irqchip_common.rs
devices/src/pci/: mod.rs  pci_configuration.rs  pci_device.rs  pci_root.rs
devices/src/register_space/: register.rs
devices/src/utils/: mod.rs
devices/src/virtio/: balloon.rs  block.rs  mod.rs  net.rs  p9.rs  queue.rs  virtio_device.rs  virtio_pci_common_config.rs  virtio_pci_device.rs
devices/src/virtio/input/: evdev.rs  event_source.rs  mod.rs
devices/src/whp_dev/: interrupt_controller.rs  interrupt_event.rs  mod.rs
kernel_loader/: Cargo.toml
kernel_loader/src/: lib.rs
kvm/: Cargo.toml
kvm/src/: lib.rs
kvm_sys/src/: lib.rs
p9/: Cargo.toml
p9/src/: server.rs
qcow/src/: qcow.rs
qcow_utils/src/: qcow_utils.rs
resources/: Cargo.toml
resources/src/: address_allocator.rs  lib.rs  system_allocator.rs
src/: linux.rs  main.rs
src/plugin/: mod.rs  process.rs
sys_util/: Cargo.toml
sys_util/src/: clock.rs  disk_util_windows.rs  errno_windows.rs  eventfd_windows.rs  guest_memory.rs  lib.rs  poll.rs  raw_fd.rs  seek_hole.rs  syslog.rs  tempdir.rs  timerfd.rs  write_zeroes.rs
tests/: plugins.rs
virtio_sys/src/: lib.rs
vm_control/: Cargo.toml
vm_control/src/: lib.rs
whp/: Cargo.toml
whp/examples/: demo.rs  demo2.rs
whp/examples/payload/: payload.img
whp/src/: cap.rs  common.rs  interrupt_controller.rs  interrupt_event.rs  lib.rs  old-lib.rs  vcpu.rs  vcpu_structs.rs  whp_structs.rs
x86_64/: Cargo.toml  host_cpuid.c
x86_64/src/: cpuid.rs  fdt.rs  gdt.rs  interrupts.rs  lib.rs  mptable.rs  regs.rs  smbios.rs
