[package]
name = "crosvm"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[profile.release]
panic = 'abort'
overflow-checks = true

[workspace]
members = ["qcow_utils"]
exclude = [
    "assertions",
    "data_model",
    "rand_ish",
    "sync",
    "sys_util",
    "syscall_defines",
    "tempfile",
]

[features]
default-no-sandbox = []
plugin = ["protos/plugin", "crosvm_plugin", "protobuf"]

[dependencies]
arch = { path = "arch" }
assertions = { path = "assertions" }
bit_field = { path = "bit_field" }
byteorder = "=1.1.0"
crosvm_plugin = { path = "crosvm_plugin", optional = true }
data_model = "*"
devices = { path = "devices" }
enumn = { path = "enumn" }
kernel_cmdline = { path = "kernel_cmdline" }
kernel_loader = { path = "kernel_loader" }
kvm = { path = "kvm" }
kvm_sys = { path = "kvm_sys" }
libc = "=0.2.44"
msg_socket = { path = "msg_socket" }
net_util = { path = "net_util" }
protobuf = { version = "2.3", optional = true }
protos = { path = "protos", optional = true }
qcow = { path = "qcow" }
rand_ish = { path = "rand_ish" }
remain = "*"
resources = { path = "resources" }
sync = { path = "sync" }
sys_util = "*"
vhost = { path = "vhost" }
vm_control = { path = "vm_control" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { path = "x86_64" }

[dev-dependencies]
sys_util = "*"

[patch.crates-io]
assertions = { path = "assertions" }
data_model = { path = "data_model" }
poll_token_derive = { path = "sys_util/poll_token_derive" }
sync = { path = "sync" }
sys_util = { path = "sys_util" }
syscall_defines = { path = "syscall_defines" }
tempfile = { path = "tempfile" }
