[package]
name = "crosvm"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[profile.release]
panic = 'abort'
overflow-checks = true

[workspace]
members = ["qcow_utils"]
exclude = [
    "assertions",
    "sync",
    "sys_util",
]

[features]
default-no-sandbox = []

[dependencies]
arch = { path = "arch" }
assertions = { path = "assertions" }
bit_field = { path = "bit_field" }
byteorder = "=1.1.0"
devices = { path = "devices" }
enumn = { path = "enumn" }
kernel_cmdline = { path = "kernel_cmdline" }
kernel_loader = { path = "kernel_loader" }
kvm = { path = "kvm" }
kvm_sys = { path = "kvm_sys" }
libc = "=0.2.44"
qcow = { path = "qcow" }
remain = "*"
resources = { path = "resources" }
sync = { path = "sync" }
sys_util = "*"
vm_control = { path = "vm_control" }
whp = { path = "whp" }

[dependencies.vm-memory]
path = "vm-memory"
default-features = false
features = ["backend-mmap"]


[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { path = "x86_64" }

[dev-dependencies]
sys_util = "*"

[patch.crates-io]
assertions = { path = "assertions" }
sync = { path = "sync" }
sys_util = { path = "sys_util" }
