[package]
name = "arch"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[dependencies]
byteorder = "*"
devices = { path = "../devices" }
kernel_cmdline = { path = "../kernel_cmdline" }
libc = "*"
resources = { path = "../resources" }
sync = { path = "../sync" }
sys_util = { path = "../sys_util" }

[target.'cfg(unix)'.dependencies]
kvm = { path = "../kvm" }

[target.'cfg(windows)'.dependencies]
whp = { path = "../whp" }
libwhp = { path = "../libwhp" }

[dependencies.vm-memory]
path = "../vm-memory"
default-features = false
features = ["backend-mmap"]
