[package]
name = "devices"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
bit_field = { path = "../bit_field" }
byteorder = "*"
data_model = { path = "../data_model" }
enumn = { path = "../enumn" }
kvm = { path = "../kvm" }
libc = "*"
remain = "*"
resources = { path = "../resources" }
sync = { path = "../sync" }
sys_util = { path = "../sys_util" }
vm_control = { path = "../vm_control" }

[dependencies.vm-memory]
path = "../vm-memory"
default-features = false
features = ["backend-mmap"]
