[package]
name = "whp"
version = "0.1.0"
authors = ["Jenny Mankin"]
edition = "2018"

[dependencies]
kvm_sys = { path = "../kvm_sys" }
libwhp = { path = "../libwhp" }
vmm-vcpu = { path = "../vmm-vcpu" }
sys_util = { path = "../sys_util" }
libc = "*"
byteorder = "*"

kvm-bindings = "0.1"

[dependencies.vm-memory]
path = "../vm-memory"
default-features = false
features = ["backend-mmap"]
