[package]
name = "x86_64"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"
build = "build.rs"

[dependencies]
arch = { path = "../arch" }
assertions = { path = "../assertions" }
byteorder = "*"
devices = { path = "../devices" }
kernel_cmdline = { path = "../kernel_cmdline" }
kernel_loader = { path = "../kernel_loader" }
kvm = { path = "../kvm" }
kvm_sys = { path = "../kvm_sys" }
libc = "*"
remain = "*"
resources = { path = "../resources" }
sync = { path = "../sync" }
sys_util = { path = "../sys_util" }

[dependencies.vm-memory]
path = "../vm-memory"
default-features = false
features = ["backend-mmap"]

[build-dependencies]
cc = "=1.0.25"
